# asyncapi3

./: .editorconfig  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
asyncapi3/: builder.py  main.py
asyncapi3/managers/: __init__.py  channel_messages_manager.py  channel_parameters_manager.py  channels_manager.py  operations_manager.py  protocols.py  servers_manager.py  tags_manager.py
asyncapi3/models/: __init__.py  asyncapi.py  base.py  base_models.py  channel.py  components.py  helpers.py  info.py  message.py  operation.py  schema.py  security.py  server.py
asyncapi3/models/bindings/: amqp.py  amqp1.py  anypointmq.py  core.py  googlepubsub.py  http.py  ibmmq.py  jms.py  kafka.py  mercure.py  mqtt.py  mqtt5.py  nats.py  pulsar.py  redis.py  sns.py  solace.py  sqs.py  stomp.py  websockets.py
asyncapi3/validators/: __init__.py  channel_bindings_ref_validator.py  channels_ref_validator.py  common.py  correlation_ids_ref_validator.py  external_docs_ref_validator.py  message_bindings_ref_validator.py  message_traits_ref_validator.py  messages_ref_validator.py  operation_bindings_ref_validator.py  operation_traits_ref_validator.py  operations_ref_validator.py  parameters_ref_validator.py  replies_ref_validator.py  reply_addresses_ref_validator.py  schemas_ref_validator.py  security_schemes_ref_validator.py  server_bindings_ref_validator.py  server_variables_ref_validator.py  servers_ref_validator.py  tags_ref_validator.py  unified_references_validator.py  utils.py
docs/extra_validators/: references.md
tests/: test_base_validation.py  test_builder.py  test_pytest_setup.py
tests/fixtures/json_specs/valid/: apache_kafka.json  ibm_mq.json  mqtt.json  websockets.json
tests/fixtures/yaml_specs/valid/: gitter.yaml  kraken.yaml  mqtt.yaml  rpc-client-asyncapi.yml
tests/fixtures/yaml_specs/valid/multi_files/: readme.md
tests/fixtures/yaml_specs/valid/multi_files/backend/: asyncapi.yaml
tests/fixtures/yaml_specs/valid/multi_files/common/: messages.yaml  parameters.yaml  schemas.yaml  servers.yaml
tests/fixtures/yaml_specs/valid/multi_files/frontend/: asyncapi.yaml
tests/fixtures/yaml_specs/valid/multi_files/notification-service/: asyncapi.yaml
tests/fixtures/yaml_specs/valid/multi_files/public-api/: asyncapi.yaml
tests/fixtures/yaml_specs/valid/single_file/: adeo-kafka-request-reply-asyncapi.yml  ibm_mq.yaml  kraken-websocket-request-reply-multiple-channels-asyncapi.yml  rpc-server-asyncapi.yml  slack-rtm-asyncapi.yml
tests/managers/: test_channel_messages_manager.py  test_channel_parameters_manager.py  test_channels_manager.py  test_operations_manager.py  test_servers_manager.py  test_tags_managers.py
tests/models/: __init__.py  test_asyncapi.py  test_base.py  test_base_models.py  test_channel.py  test_components.py  test_helpers.py  test_info.py  test_message.py  test_operation.py  test_schema.py  test_security.py  test_server.py
tests/models/bindings/: __init__.py  test_amqp.py  test_amqp1.py  test_anypointmq.py  test_core.py  test_googlepubsub.py  test_http.py  test_ibmmq.py  test_jms.py  test_kafka.py  test_mercure.py  test_mqtt.py  test_mqtt5.py  test_nats.py  test_pulsar.py  test_redis.py  test_sns.py  test_solace.py  test_sqs.py  test_stomp.py  test_websockets.py
tests/validators/: __init__.py  test_common.py  test_external_docs_ref_validator.py  test_reference_utils.py  test_server_bindings_ref_validator.py  test_server_variables_ref_validator.py  test_servers_ref_validator.py  test_tags_ref_validator.py  test_unified_references_validator.py
